--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 </div>
                 <nav class="menu">
                     <ul class="menu__list">
-                        <li class="menu__link"><a href="#Home">Home</a></li>
-                        <li class="menu__link"><a href="#About">About</a></li>
-                        <li class="menu__link"><a href="#Product">Product</a></li>
-                        <li class="menu__link"><a href="#Pricing">Pricing</a></li>
+                        <li class="menu__link"><a href="#Home" class="Menu__link-Home">Home</a></li>
+                        <li class="menu__link"><a href="#About" class="Menu__link-About">About</a></li>
+                        <li class="menu__link"><a href="#Product" class="Menu__link-Product">Product</a></li>
+                        <li class="menu__link"><a href="#Pricing" class="Menu__link-Pricing">Pricing</a></li>
                     </ul>
                 </nav>
             </div>
@@ -59,27 +59,27 @@
                 <div class="services__list">
                     <div class="services__block">
                         <img src="./img/DesignLogo.svg" alt="" class="services__block-img">
-                        <h2 class="services__block-title">Design</h2>
-                        <p class="services__block-desc">a plan or drawing produced to show the look and function</p>
-                        <a href="#" class="services__block-link">Learn more</a>
+                        <h2 class="services__block-title services__block-title-design">Design</h2>
+                        <p class="services__block-desc services__block-desc-design">A plan or drawing produced to show the look and function</p>
+                        <a href="#" class="services__block-link services__block-link1">Learn more</a>
                     </div>
                     <div class="services__block">
                         <img src="./img/DevelopmentLogo.svg" alt="" class="services__block-img">
-                        <h2 class="services__block-title">Development</h2>
-                        <p class="services__block-desc">Development is defined as the process of growth or new </p>
-                        <a href="#" class="services__block-link">Learn more</a>
+                        <h2 class="services__block-title services__block-title-development">Development</h2>
+                        <p class="services__block-desc services__block-desc-development">Development is defined as the process of growth or new </p>
+                        <a href="#" class="services__block-link services__block-link2">Learn more</a>
                     </div>
                     <div class="services__block">
                         <img src="./img/Vector.png" style="width: 48px; height:42.8px;" alt="" class="services__block-img">
-                        <h2 class="services__block-title">Branding</h2>
-                        <p class="services__block-desc">The marketing practice of creating a name, symbol or </p>
-                        <a href="#" class="services__block-link">Learn more</a>
+                        <h2 class="services__block-title services__block-title-Branding">Branding</h2>
+                        <p class="services__block-desc services__block-desc-Branding">The marketing practice of creating a name, symbol or logotype</p>
+                        <a href="#" class="services__block-link services__block-link3">Learn more</a>
                     </div>
                     <div class="services__block">
                         <img src="./img/IllustrationLogo.svg" alt="" class="services__block-img">
-                        <h2 class="services__block-title">Illustration</h2>
-                        <p class="services__block-desc">An illustration is a decoration, interpretation or visualn</p>
-                        <a href="#" class="services__block-link">Learn more</a>
+                        <h2 class="services__block-title services__block-title-Illustration">Illustration</h2>
+                        <p class="services__block-desc services__block-desc-Illustration">An illustration is a decoration, interpretation or visualn</p>
+                        <a href="#" class="services__block-link services__block-link4">Learn more</a>
                     </div>
                 </div>
             </div>
@@ -88,14 +88,14 @@
     <section class="things" id="About">
         <div class="container">
             <div class="things__inner">
-                <img src="./img/Things.svg" alt="" class="things__img">
+                <img src="./img/Things.svg" alt="Things" class="things__img">
                 <div class="things__block">
                     <h3 class="things__block-subtitle subtitle">Design Things </h3>
                     <h1 class="things__block-title title">We Loves To Design
                         Your Creative Ideas</h1>
                     <p class="things__block-desc">A creative concept is an overarching “Big Idea” 
                         that captures audience interest, influences their emotional response and inspires 
-                        them to take action.It is a unifying theme that can be used across all campaign messages 
+                        them to take action.It is a unifying theme that can be used across all campaign messages. 
                     </p>
                     <a href="#" class="things__block-link">Learn more<img src="./img/arrow.svg" class="things__block-arrow"></a>
                 </div>
@@ -109,9 +109,7 @@
                     <h3 class="TeamWork__block-subtitle subtitle">Our Teamwork </h3>
                     <h1 class="TeamWork__block-title title">We Believe Success 
                         Lies On Teamwork</h1>
-                    <p class="TeamWork__block-desc">Good teamwork means a synergistic way of working with each person committed 
-                        and working towards a shared goal. ... It is therefore a necessity that leaders facilitate and build the 
-                        teamwork skills of their people if they are
+                    <p class="TeamWork__block-desc">Good teamwork means a synergistic way of working with each person committed and working towards a shared goal. ... It is therefore a necessity that leaders facilitate and build the teamwork skills of their people.
                     </p>
                     <a href="#" class="TeamWork__block-link">Learn more<img src="./img/arrow.svg" class="TeamWork__block-arrow"></a>
                 </div>
@@ -129,20 +127,19 @@
                         Client Says About Us</h1>
                     <div class="Testimonial__slider">
                         <div>
-                            <p class="Testimonial__slider-comment">“ Heartiest congratulations to the team for Future projects. I extend thankful wishes and
+                            <p class="Testimonial__slider-comment Testimonial__slider-comment1">“ Heartiest congratulations to the team for Future projects. I extend thankful wishes and
                              wish the team best of luck for the future assignments to come. Your effort is gladly ”</p>
                              <span class="Testimonial__slider-author">Jorge Morrison</span>
                              <span class="Testimonial__slider-country">North California, USA</span>
                         </div>
                         <div>
-                            <p class="Testimonial__slider-comment">“ Very cool company! We use a rented server, everything is stable! The support is super, lightning fast, thanks a 
+                            <p class="Testimonial__slider-comment Testimonial__slider-comment2">“ Very cool company! We use a rented server, everything is stable! The support is super, lightning fast, thanks a 
                                 lot to the guys for such service and the highest culture of customer service! Keep it up ! We advise everyone) ”</p>
                              <span class="Testimonial__slider-author">Alex Vanger</span>
                              <span class="Testimonial__slider-country">Moscow, Russia</span>
                         </div>
                         <div>
-                            <p class="Testimonial__slider-comment">“ Brand new data center. The work is connected with such places. They have an unpleasant SCUD, of course. In each passed door, you need to lean
-                                 your card and not forget. ”</p>
+                            <p class="Testimonial__slider-comment Testimonial__slider-comment3">“ Brand new data center. The work is connected with such places. They have an unpleasant SCUD, of course. In each passed door, you need to lean your card and not forget. ”</p>
                              <span class="Testimonial__slider-author">Joe Golberg</span>
                              <span class="Testimonial__slider-country">Oslo, Norway</span>
                         </div>
@@ -189,30 +186,30 @@
                     </div>
                 </div>
                 <div class="footer__block">
-                    <h4 class="footer__block-title">Resouces</h4>
+                    <h4 class="footer__block-title footer__block-title-Resouces">Resouces</h4>
                     <ul class="footer__list">
-                        <li class="footer__item"><a href="" class="footer__link">Revisions</a></li>
-                        <li class="footer__item"><a href="" class="footer__link">Sheets</a></li>
-                        <li class="footer__item"><a href="" class="footer__link">Quiz</a></li>
-                        <li class="footer__item"><a href="" class="footer__link">Drill</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link footer__link-Revisions">Revisions</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link footer__link-Sheets">Sheets</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link footer__link-Quiz">Quiz</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link footer__link-Drill">Drill</a></li>
                     </ul>
                 </div>
                 <div class="footer__block">
-                    <h4 class="footer__block-title">About</h4>
+                    <h4 class="footer__block-title footer__block-title-About">About</h4>
                     <ul class="footer__list">
-                        <li class="footer__item"><a href="" class="footer__link">About us</a></li>
-                        <li class="footer__item"><a href="" class="footer__link">Partners</a></li>
-                        <li class="footer__item"><a href="" class="footer__link">Contact us</a></li>
-                        <li class="footer__item"><a href="" class="footer__link">Careers</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link footer__link-About">About us</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link footer__link-Partners">Partners</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link footer__link-Contact">Contact us</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link footer__link-Careers">Careers</a></li>
                     </ul>
                 </div>
                 <div class="footer__block">
-                    <h4 class="footer__block-title">Helpful link</h4>
+                    <h4 class="footer__block-title footer__block-title-Helpful">Helpful link</h4>
                     <ul class="footer__list">
-                        <li class="footer__item"><a href="" class="footer__link">Mirage</a></li>
-                        <li class="footer__item"><a href="" class="footer__link">Solutions</a></li>
-                        <li class="footer__item"><a href="" class="footer__link">Industries</a></li>
-                        <li class="footer__item"><a href="" class="footer__link">Services</a></li>
+                        <li class="footer__item"><a href="" class="footer__link footer__link-Mirage">Mirage</a></li>
+                        <li class="footer__item"><a href="" class="footer__link footer__link-Solutions">Solutions</a></li>
+                        <li class="footer__item"><a href="" class="footer__link footer__link-Industries">Industries</a></li>
+                        <li class="footer__item"><a href="" class="footer__link footer__link-Services">Services</a></li>
                     </ul>
                 </div>
             </div>
@@ -221,13 +218,19 @@
     <div class="copyright"> 
         <div class="container">
             <div class="copyright__inner">
-                <span>© All Rights Reserved By Mirage 2020</span>
-                <div class="language">Eng <span class="language__trio">▼</span></div>
+                <span class="copyright__inner-copy">© All Rights Reserved By Mirage 2020</span>
+                <div class="language">
+                    <select class="change-lang">
+                        <option value="ru">Рус</option>
+                        <option value="en" selected>Eng</option>
+                    </select>
+                </div>
             </div>
         </div>
     </div> 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script type="text/javascript" src="./js/slick-1.8.1/slick/slick.min.js"></script>
+<script src="./js/language.js"></script>
 <script src="./js/main.js"></script>
 </body>
 </html>
